[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helm-mcp"
version = "0.1.2"
description = "MCP server exposing all Helm CLI capabilities via the Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "sreengineer" },
]
keywords = ["helm", "kubernetes", "mcp", "model-context-protocol", "fastmcp", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/SCGIS-Wales/helm-mcp"
Repository = "https://github.com/SCGIS-Wales/helm-mcp"
Issues = "https://github.com/SCGIS-Wales/helm-mcp/issues"
Documentation = "https://github.com/SCGIS-Wales/helm-mcp#python-package"
Changelog = "https://github.com/SCGIS-Wales/helm-mcp/releases"

[project.scripts]
helm-mcp-python = "helm_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/helm_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/helm_mcp/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
